# mobile-sdk-react-native

./: .gitignore  README.md  boostai-react-native.podspec  package-lock.json  package.json  react-native.config.js  tsconfig.json
RNBoostAIExample/: App.tsx  app.json  package-lock.json  package.json
RNBoostAIExample/android/: settings.gradle
RNBoostAIExample/android/app/: build.gradle
RNBoostAIExample/android/app/src/main/res/values/: strings.xml
RNBoostAIExample/ios/: Podfile
RNBoostAIExample/ios/RNBoostAIExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
RNBoostAIExample/ios/RNBoostAIExample.xcodeproj/: project.pbxproj
RNBoostAIExample/ios/RNBoostAIExample.xcodeproj/xcshareddata/xcschemes/: RNBoostAIExample.xcscheme
RNBoostAIExample/ios/RNBoostAIExample.xcworkspace/: contents.xcworkspacedata
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/boostai/reactnative/: BoostAIAvatarViewManager.kt  BoostAIModule.kt  (+2 more)
android/src/main/jni/: BoostAISpec.h  CMakeLists.txt
ios/: RNBoostAI.m  RNBoostAIConfigConverter.swift  RNBoostAIMessageConverter.swift  RNBoostAIModule.swift  RNBoostAIViewManagers.swift
setup-and-tools/: BOOSTAI_SETUP.md  install-local-boostai.sh
src/: BoostAIAvatarView.tsx  BoostAIChatView.tsx  BoostAIModalTouchable.tsx  BoostAIModule.ts  index.tsx
src/hooks/: useBoostAI.ts  useBoostAIEvents.ts  useBoostAIMessages.ts
src/specs/: BoostAIAvatarViewNativeComponent.ts  BoostAIChatViewNativeComponent.ts  NativeBoostAI.ts
src/types/: Config.ts  Events.ts  Messages.ts  index.ts
(+6 files in other folders)
